syntax = "proto3";

package api;

import "google/api/annotations.proto";

message RemoteNode {
    reserved 2; // type

    uint32 id = 1;
    string name = 3;
    string region = 4;
}

message RemoteService {
    reserved 1, 3; // id, and node_id

    string type = 2;
    string address = 4;
    uint32 port = 5;
    string engine = 6;
    string engine_version = 7;
}

message RemoteInstance {
    RemoteNode node = 1;
    RemoteService service = 2;
}


message RemoteListRequest {
}

message RemoteListResponse {
    repeated RemoteInstance instances = 1;
}

service Remote {
    rpc List(RemoteListRequest) returns (RemoteListResponse) {
        option (google.api.http) = {
            get: "/v0/remote"
        };
    }
}
